# public-domain

./: ATADRVR.HTM  ATAIO.H  ATAIOINT.C  ATAIOISA.C  ATAIOPCI.C  ATAIOPIO.C  ATAIOREG.C  ATAIOSUB.C  ATAIOTMR.C  ATAIOTRC.C  Bradley Gratis.txt  Copyright.txt  DMA.HTM  EXAMPLE1.C  EXAMPLE1.MAK  EXAMPLE2.C  EXAMPLE2.MAK  Fold.sfd  HISTORY.TXT  INITPCC.HTM  Makefile  PCC.HTM  PIO.HTM  README  README.TXT  README.md  SATA.HTM  Tudor rose Bold Oblique.sfd  Tudor rose Bold.sfd  Tudor rose oblique.sfd  Tudor rose.sfd  _sums  alloc.c  alloc.h  cexpr.c  cg386.c  cgen.h  data.h  decl.c  decl.h  (+30 more)
1/: 1664.md
FastDelegate/: license.txt
Hapy-0.0.8/: acinclude.m4  configure.in
a/: a_make.md  atadrv.md  atlast.md  avltree.md
a_make/: !readme  README.TXT  check.c  h.h  ifproc.c  input.c  macro.c  main.c  make.c  makefile  makefile.lc  makefile.tc  makefile.vms  mtime.c  reader.c  rules.c
all_fonts_01102011/: arity.fon  changes.txt  dodec.fon  mutex.fon  mutmon.fon  squint.fon
avltree/: Makefile  README  t_trtest.c  tree.c  tree.man3
b/: balz.md  base64.md  bget.md  bitcollider.md  borealis.md  bradley_gratis.md  byacc.md
balz-1.15/: README
bitcollider/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.win32  config.h.in  configure  configure.in
bitcollider/image/: Makefile.am  Makefile.in  image.c
bitcollider/include/: bc_version.h  bitcollider.h  bitprint.h  cache.h  defs.h  dirsearch.h  ed2k_md4.h  ftuuhash.h  gui_win32.h  kztree.h  list.h  plugin.h  sha1.h  tiger.h  tigertree.h
bitcollider/lib/: Makefile.am  Makefile.in  bitprint.c  browser.c  browser.h  cache.c  dirsearch.c  ed2k_md4.c  ftuuhash.c  id3.c  id3.h  kztree.c  main.c  md5.c  md5.h  mp3.c  mp3.h  plugin_man.c  plugin_man.h  sboxes.c  sha1.c  tiger.c  tigertree.c
bitcollider/src/: Makefile.am  Makefile.in  bitcollider.c
bitcollider/video/: Makefile.am  Makefile.in  avi.c  mpeg.c  quicktime.c  video.c  video.h
bitcollider/vorbis/: Makefile.am  Makefile.in  vorbis.c  vorbis.h
bitcollider/wav/: Makefile.am  Makefile.in  wav.c
book/: p.c
byacc-20090221/: CHANGES
c/: clock24.md  cmucl.md  cpu8080.md  crypto.md  cryptopp.md
clock24/: LICENSE  Makefile  Makefile.macosx  README  clock24.c
cmucl/: FEATURES  RCSSNAP  RCSSNAP.17b  RCSSNAP.17c  RCSSNAP.17e  RCSSNAP.17f  RCSconfig  RCSconfig.trunk  VERSION  obootstrap.lisp  updates-from-17b  updates-from-17c  updates-from-17e
crypto/: distributors.htm
d/: date.md  dbug.md  decuscpp.md
date/: README  date.1  date.c  strftime.3  strftime.c
dbug/: README  acconfig.h  config.h  example.c
dbug/src/: .indent.pro  Makefile.am  dbug.c  dbug.h  dbug_long.h
decuscpp/: Imakefile
e/: easylzma.md  efgh.md  ersatz-emacs.md  es.md
efgh/: README.txt  euclid.txt  fixed.txt  gprintf.txt  htab.txt  llmsortc.txt  llmsorth.txt  matrix.txt  mergesor.txt  qsort.txt  rsa.txt  smergeso.txt  sort.txt  unix2dos.txt  zsort.txt
ersatz-emacs/: Makefile  display.c  line.c
f/: fastdelegate.md  fnv.md  fold.md  foundationlib.md  fpgatools.md  free_prolog.md
free_prolog.0.1/: README.199
g/: gddcalc.md  geezer.md  gif2gpr.md  gifsave.md  glob.md  glsfcave.md  graphics_gems.md
gddcalc_0.81_src/: DibFile.c  DibFile.h  LICENSE.txt  SouthGDD.c  calcDayBounds.c  calcDlg3Results.c  chkInputs1.c  chkInputs2.c  chkTimes.c  gddcalc.c  gddcalc.h  gddcalc.rc  getDaysIrr.c  getDescriptor.c  getMonthsGdd.c  getMonthsIrr.c  getRandomName.c  initialize1.c  initialize2.c  initialize5.c  initializeAtlanta.c  isLeapYear.c  logging.c  northGDD.c  populateDialog1.c  populateDialog2.c  readme.txt  reinitialize1.c  reinitialize2.c  resource.h  setMonthLengths.c  setPreferences.c  showAboutBox.c  showDayBounds.c  showDaysGDD.c  showDaysIrr.c  showDlg3Results.c  showTutorialMsg.c  solpos.c  solpos.h  (+6 more)
geezer/: a20.asm  bankblit.c  chkhd.c  cutwav.c  disk.c  disk32.c  djint.c  dosclip.c  dosreg.c  dumpavi.c  dumpjpeg.c  dumpmov.c  dumppng.c  dumpwav.c  edid.c  fonread.c  img2htm.c  index.txt  kbhit.c  motoroff.asm  pc-kbd.c  pc-rtc.c  pc-timer.c  pci.c  pmode.asm  pnpbio32.c  pollout.c  printf.c  serial.c  setjmp.c  setres.c  tblchk.c  tcint.c  tidycoff.c  unreal.asm  untran.c  vbe.c  vbe32.c  wat16int.c  wat32int.c
gif2gpr/: gif2gpr.c
gifsave/: ChangeLog  Makefile  Makefile.bcc  borland.c  example.c  gifsave-1.0.2.lsm  gifsave.lsm.in
glob/: glob.c  glot.c  makefile
glsfcave/: LICENSE  Makefile  Makefile.irix  Makefile.macosx  README  glsfcave.c
h/: hapy.md  hla.md  holdem.md  httpproxy.md  hutils.md  hyperschema.md
holdem/: README.txt
httpproxy-0.2/: INSTALL  LICENSE  Makefile  README  httpproxy.1  httpproxy.c  httpproxy.list  proxy.c  proxy.h  relay.c  relay.h  util.c  util.h  version.h
hutils/: .gitignore  Makefile  README  TODO  echo.c  false.c  hlibc-build.sh  libhutils.h  pwd.c  sh.c  true.c
i/: i3project.md  ici.md  imagelib.md
ici/: BUILDING  CHANGES  CREDITS  Makefile.beos  Makefile.bsd  Makefile.hp  Makefile.irix  Makefile.linux  Makefile.maint  Makefile.next  Makefile.sco  Makefile.sol2  Makefile.sun  Makefile.ultrix  Makefile.w32  PLATFORM  README  TODO  VERSION  alloc.c  alloc.h  aplfuncs.c  arith.c  array.c  array.h  binop.h  buf.c  buf.h  call.c  catch.c  catch.h  cfunc.c  cfunc.h  cfunco.c  clib.c  clib2.c  compile.c  conf-beos_x86.h  conf-bsd.h  conf-hp.h  (+100 more)
include/: setjmp.h  stdio.h  syscall.h
j/: jdmcox.md  jhead.md  jonesforth.md  jpeg_compressor.md
jdmcox/: AlarmClock2.c  Blackboard.c  Brokeout.c  Calendar3.c  Checkers.c  FillOutAForm.cpp  MastMind.c  PianoRollComposer.c  PlayWave.c  Puzzle.c  PyramidSolitaire.c  Recorder.c  RedEye.c  Simple Family Tree.cpp  (+10 more)
libmaglo-0.99/: Makefile.am  README  configure.in  libmaglo.c  maglo.h  magtoppm.c
libmaglo-0.99/man/: MAGReader.3  MAGReaderDelete.3  MAGReaderNextPixel.3  MAGclose.3  MAGcomment.3  MAGcommentSize.3  MAGimageWidth.3  MAGmacCode.3  MAGmacFlags.3  MAGmacType.3  MAGopen.3  MAGpalette.3  MAGpixelWidth.3  MAGscrMode200Lines.3  MAGscrModeCode.3  MAGscrModeIsDigital.3  MAGscrModeNumColors.3  MAGuserName.3  MAGversion.3  Makefile.am  libmaglo.7  magtoppm.1  mkhtml.sh
(+4898 files in other folders)
