AC_INIT([libmaglo],[0.99],[posco dot grubb at gmail dot com])
AM_INIT_AUTOMAKE([1.9 foreign])

AC_PROG_CC
AC_PROG_LIBTOOL

AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/types.h sys/stat.h sys/mman.h unistd.h inttypes.h)

AC_FUNC_MEMCMP
AC_FUNC_MMAP

AC_CONFIG_FILES([Makefile])
AC_OUTPUT([man/Makefile])
